[gd_scene load_steps=2 format=3 uid="uid://cl331rhban1he"]

[ext_resource type="Script" uid="uid://coo3cllrqnt21" path="res://scenes/main/spawners/enemy_spawner.gd" id="1_w1txr"]

[node name="EnemySpawner" type="Node2D"]
script = ExtResource("1_w1txr")

[node name="Sprite2D" type="Sprite2D" parent="."]

[node name="EnemySpawnTimer" type="Timer" parent="."]

[connection signal="timeout" from="EnemySpawnTimer" to="." method="_on_enemy_spawn_timer_timeout"]
